fix custom select boxes in stage 3 being visible through the floating header

--- a/public/stylesheets/extra.css
+++ b/public/stylesheets/extra.css
@@ -891,3 +891,6 @@ ul.contact-tabset li.active a ,
 	background-position: 0 -88px;
 	text-decoration: none;
 }
+.floatHeader {
+	z-index: 10;
+}
